--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,6 @@ jobs:
     uses: SPHTech-Platform/reusable-workflows/.github/workflows/terraform.yaml@main
     with:
       upload_sarif: false
+      default_runner_override_label: self-hosted
       runner_label: platform-eng-ent-v2-dual
-      skip_tflint_warn_for_changed_files: true
     secrets: inherit
